# FloodRisk

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  DATA_ACQUISITION_SUMMARY.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  quickstart_ml.sh  requirements-api.txt  requirements-docker.txt  requirements-ml.txt  requirements-streamlit.txt  requirements.txt  run_local.py  setup.cfg  setup.py  simple_api.py  streamlit_app.py  test_api.py  test_integration.py  test_noaa_local.py  train_simple.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/actions/setup-gdal/: action.yml
.github/workflows/: ci-gdal-alternative.yml  ci.yml
.hive-mind/: config.json  hive.db
.swarm/: memory.db-shm  memory.db-wal
config/: nashville_demo_config.yaml
config/data/: data_sources.yaml
config/preprocessing/: nashville_config.json
config/validation/: default_config.yaml
configs/: model_config.yaml
data/nashville/: test_config.pkl
data/nashville/rainfall/: atlas14_point_36.0928_-87.1284.csv
data/nashville/simulations/: batch_summary.json  training_data_manifest.json
data/processed/precipitation_grids/: combined_12hr.npz  combined_24hr.npz  combined_6hr.npz  cpc_precipitation.npz  grid_statistics.json  nashville_100yr_12hr.npz  nashville_100yr_24hr.npz  nashville_100yr_6hr.npz  nashville_10yr_12hr.npz  nashville_10yr_24hr.npz  nashville_10yr_6hr.npz  nashville_25yr_12hr.npz  nashville_25yr_24hr.npz  nashville_25yr_6hr.npz  nashville_2yr_12hr.npz  nashville_2yr_24hr.npz  nashville_2yr_6hr.npz  nashville_500yr_12hr.npz  nashville_500yr_24hr.npz  nashville_500yr_6hr.npz  nashville_50yr_12hr.npz  nashville_50yr_24hr.npz  nashville_50yr_6hr.npz  nashville_grid_summary.csv  noaa_100yr_12hr.npz  noaa_100yr_24hr.npz  noaa_100yr_6hr.npz  noaa_25yr_24hr.npz  noaa_grid_statistics.json  noaa_grid_summary.csv  processed_100yr_24hr.npz
data/training_tiles/: tiling_config.json
data/training_tiles/test/: metadata.json
data/training_tiles/train/: metadata.json
data/v2_additional/: DOWNLOAD_SUMMARY.md
data/v2_additional/2010_flood_validation/: 2010_flood_metadata.json  DOWNLOAD_INSTRUCTIONS.md
data/v2_additional/area_reduction_factors/: area_reduction_factors.csv
data/v2_additional/precipitation_grids/: AWS_DOWNLOAD_INSTRUCTIONS.md  DOWNLOAD_INSTRUCTIONS.md  (+4 more)
demo/: .vercelignore  DEMO_SCRIPT.md  Dockerfile  QUICK_START.md  README.md  VERCEL_DEPLOY.md  app.py  docker-compose.yml  package.json  requirements.txt
demo/api/: index.py
demo/templates/: index.html
docs/: APPROACH.md  APPROACH_v2.md  CODE_REVIEW_REPORT.md  DOCUMENTATION_REVIEW_REPORT.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  ML_IMPLEMENTATION.md  REPO_EVAL.md  SETUP_PRODUCTION_ML.md  TRAINING_WITH_REAL_DATA.md  data_acquisition.md  preprocessing_integration.md  simulation_pipeline.md  validation_framework_guide.md
docs/implementation/: code_adaptation.md  implementation_plan.md  implementation_plan_v2.md  model_integration.md
docs/presentation/: demo_script.md  executive_summary.md  results_analysis.md  slides_outline.md  technical_approach.md
examples/: api_client.py  data_acquisition_example.py  end_to_end_pipeline.py  nashville_demo.py  preprocessing_demo.py  quick_start_validation.py  run_simulation_example.py  validation_example.py
lightning_logs/version_0/: hparams.yaml
memory/: claude-flow-data.json
memory/agents/: README.md
memory/sessions/: README.md
scripts/: check_data_status.py  convert_npy_to_geotiff.py  create_training_tiles.py  generate_synthetic_labels.py  run_simulation_pipeline.py  train_model.py
scripts/data_acquisition/: __init__.py  automated_noaa_download.py  download_nashville_data.py  download_noaa_grids.py  download_v2_data.py  noaa_aws_download.py  noaa_download_direct.py  validate_data.py
scripts/data_processing/: analyze_noaa_grid.py  generate_nashville_precipitation.py  process_noaa_downloads.py  process_precipitation_grids.py
src/: __init__.py
src/api/: __init__.py  config.py  inference.py  main.py  metrics.py  run_server.py  schemas.py  utils.py
src/data/: __init__.py  config.py  manager.py
src/ml/: __init__.py
src/models/: __init__.py  flood_cnn.py
src/pipeline/: __init__.py  checkpoint_manager.py  integration_api.py  main_controller.py  progress_tracker.py  resource_manager.py
src/preprocessing/: __init__.py  dem_processor.py  normalizer.py  patch_extractor.py  rainfall_generator.py  terrain_features.py
src/simulation/: README.md  __init__.py  batch_orchestrator.py  lisflood_simulator.py  metadata_tracker.py  optimized_batch_orchestrator.py  parameter_generator.py  preprocessing_integration.py  result_processor.py  validation.py
src/training/: train.py
src/validation/: __init__.py  lisflood_validator.py  metrics.py  ml_integration_validator.py  nfip_validator.py  pipeline_validator.py  qa_dashboard.py  report_generator.py  utils.py  visualization.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_api.py  test_data_acquisition.py  test_e2e.py  test_model.py  test_preprocessing.py  test_simulation.py  test_validation.py
tests/integration/: test_api.py
tests/unit/: test_flood_cnn.py
tests/validation/: test_metrics.py  test_ml_integration.py  test_pipeline_validator.py
(+92 files in other folders)
